Fixed modal scrollbar issues

--- a/src/main.css
+++ b/src/main.css
@@ -513,6 +513,13 @@ input[type="button"]:disabled {
   padding: 1.5rem 1.5rem;
   max-height: 100%;
   overflow: auto;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.back-project-modal::-webkit-scrollbar {
+  display: none;
 }
 
 .back-project-modal .modal {
